--- a/index.html
+++ b/index.html
@@ -619,13 +619,13 @@
 
     <div class="share">
         <a href="#" class="fab fa-facebook-f"></a>
-        <a href="https://twitter.com/priyankakorde" class="fab fa-twitter"></a>
-        <a href="https://www.instagram.com/im_priyankak_/" class="fab fa-instagram"></a>
-        <a href="https://www.linkedin.com/in/priyanka-korde-2029521a1/" class="fab fa-linkedin"></a>
-        <a href="https://www.linkedin.com/in/rohit-m-3494521a2/" class="fab fa-linkedin"></a>
+        
+        <a href="https://www.instagram.com/srishti8_3/" class="fab fa-instagram"></a>
+        <a href="https://www.linkedin.com/in/gsrishti-cg876/" class="fab fa-linkedin"></a>
+        
     </div>
 
-    <div class="credit"> created by <span>Srishti Gupta </span>copyright ©2022 all rights reserved! </div>
+    <div class="credit"> created by <span>Srishti Gupta </span>copyright ©2024 all rights reserved! </div>
 
 </section>
 
