--- a/index.html
+++ b/index.html
@@ -610,8 +610,8 @@
             <h3>contact info</h3>
             <a href="#"> <i class="fas fa-phone"></i> 9167064054 </a>
             <a href="#"> <i class="fas fa-phone"></i> 77388 44717 </a>
-            <a href="#"> <i class="fas fa-envelope"></i> kordepriyanka1118@gmail.com </a>
-            <a href="#"> <i class="fas fa-envelope"></i> rohitmishra.rm2106@gmail.com </a>
+            <a href="#"> <i class="fas fa-envelope"></i> kajsha.95@gmail.com </a>
+            <a href="#"> <i class="fas fa-envelope"></i> guptasrishti@gmail.com </a>
             <img src="https://raw.githubusercontent.com/KordePriyanka/Books4MU-Book-Store-Website-/main/image/worldmap.png" class="map" alt="">
         </div>
 
